--- a/app/templates/recipe.html
+++ b/app/templates/recipe.html
@@ -61,7 +61,7 @@
     <div class="recipe-container">
         <h1>{{ recipe.name }}</h1>
         <div class="image-container">
-            <img src="https://menunedeli.ru/wp-content/uploads/2022/07/41322293-5B97-451F-886E-2522AB91F67B-1200x948.jpeg" alt="{{ recipe.name }}">
+            <img src="{{ recipe.image_link }}" alt="{{ recipe.name }}">
         </div>
         <p>{{ recipe.description }}</p>
         <h2>Ингредиенты:</h2>
